--- a/forecast.css
+++ b/forecast.css
@@ -175,6 +175,7 @@ footer {
 
 .date-container .time {
   font-size: 4.3em;
+  margin-top: 0.5em;
 }
 
 .date-container #am-pm {
@@ -184,25 +185,28 @@ footer {
 
 .date-container .date {
   font-size: 1.8em;
+  margin: 1em 1em 2em 0;
 }
 
 /* ------- PLACE */
 
 .place-container {
   text-align: end;
+  margin-top: 2em;
 }
 
 .place-container .time-zone {
-  font-size: 1em;
+  font-size: 1.25em;
   font-weight: 200;
+  margin-bottom: 0.7em;
 }
 
 .place-container .country {
-  font-size: 0.6em;
-  font-weight: 700;
+  font-size: 0.85em;
+  font-weight: 600;
 }
 
-/* ------- PLACE */
+/* ------- TODAY */
 
 .current-info {
   display: flex;
@@ -224,6 +228,8 @@ footer {
 .current-info .others .weather-item {
   display: flex;
   justify-content: space-between;
+  font-size: 1.1em;
+  padding: 0.5em;
 }
 
 /* see BAM selecting and child classes */
@@ -244,6 +250,9 @@ footer {
 
 /* today */
 
+.current-day {
+}
+
 .future-forecast .today {
   display: flex;
   align-items: center;
@@ -251,7 +260,8 @@ footer {
 }
 
 .future-forecast .today .day {
-  padding: 0.3em 0.6em;
+  margin: 1em 2em 1em 0;
+  padding: 0.3em 1em;
   background: #b4b4b4;
   border-radius: 3em;
   text-align: center;
@@ -278,14 +288,14 @@ footer {
   letter-spacing: 0.05em;
 
   margin: 0 0.6em;
-  padding: 0.9em;
+  padding: 2em 1em;
   /* border: 0.03em solid rgb(216, 216, 216); */
   border-radius: 0.6em;
   background: rgba(65, 65, 65, 0.2);
 }
 
 .weather-forecast .weather-forecast-item .day {
-  padding: 0.3em 0.6em;
+  padding: 0.3em 1.2em;
   background: #b4b4b4;
   border-radius: 3em;
   text-align: center;
