--- a/forecast.css
+++ b/forecast.css
@@ -232,8 +232,6 @@ footer {
   padding: 0.5em;
 }
 
-/* see BAM selecting and child classes */
-
 /* ------- SLIDER */
 
 footer {
@@ -250,13 +248,13 @@ footer {
 
 /* today */
 
-.current-day {
-}
-
 .future-forecast .today {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: rgba(65, 65, 65, 0.2);
+  padding: 0.6em;
+  border-radius: 10px;
 }
 
 .future-forecast .today .day {
@@ -307,6 +305,14 @@ footer {
 
 /* ------- MEDIA QUERIES */
 
+@media only screen and (max-width: 1400px) {
+  .future-forecast {
+    justify-content: start;
+    align-items: none;
+    overflow-x: scroll;
+  }
+}
+
 @media only screen and (max-width: 730px) {
   /* scrollable footer */
   footer {
@@ -314,6 +320,20 @@ footer {
     align-items: none;
     /* enables scroll on y-axis */
     overflow-y: scroll;
+  }
+
+  .future-forecast-item {
+    padding: 2em 2em;
+  }
+
+  .future-forecast .weather-forecast-item {
+    padding: 2em 2em;
+    text-align: center;
+  }
+
+  .weather-forecast .weather-forecast-item .temp {
+    width: 110%;
+    font-size: 1.1em;
   }
 
   .future-forecast .today .temp {
@@ -334,7 +354,7 @@ footer {
 
   .place-container {
     text-align: end;
-    margin-top: 0.9em;
+    margin-top: 1.7em;
   }
 
   .place-container .time-zone {
@@ -342,18 +362,71 @@ footer {
   }
 
   .current-info .others {
-    padding: 0.75em;
+    padding: 1.5em;
   }
 
   .current-info .others .weather-item {
-    font-size: 0.8em;
+    font-size: 1em;
   }
 }
 
-@media only screen and (max-width: 1400px) {
-  .future-forecast {
-    justify-content: start;
-    align-items: none;
-    overflow-x: scroll;
+@media only screen and (max-width: 500px) {
+  .container {
+    padding: 2em 2em 1em 3em;
+  }
+
+  .place-container .time-zone {
+    font-size: 0.9em;
+  }
+
+  .place-container .country {
+    font-size: 0.6em;
+  }
+
+  .future-forecast .today {
+    padding: 0 3em;
+    display: flex;
+    justify-content: center;
+  }
+
+  .current-info .others {
+    padding: 1em;
+    font-size: 0.9em;
+    line-height: 0.7em;
+  }
+
+  .future-forecast .today .day {
+    font-size: 0.9em;
+    padding: 0.9em;
+  }
+
+  .future-forecast .today,
+  .future-forecast .today .temp,
+  .future-forecast .weather-forecast-item .temp {
+    font-size: 0.9em;
+  }
+
+  .future-forecast .today .w-icon {
+    width: 90%;
+    height: auto;
+    padding: 3.5em 1em;
+  }
+
+  .weather-forecast .weather-forecast-item {
+    margin: 1em;
+    padding: 0 1em 1em 1em;
+  }
+
+  .weather-forecast .weather-forecast-item .day {
+    font-size: 0.9em;
+  }
+
+  .weather-forecast .weather-forecast-item .w-icon {
+    height: 30%;
+    margin-top: 0.5em;
   }
 }
+
+@media only screen and (max-width: 500px) {
+}
+/* see BAM selecting and child classes */
